# graph-database-benchmark

./: .gitignore  .gitmodules  API_SPECIFICATION.md  LICENSE  README.md  benchmark.py  build.sh  database-config.json  datasets.json  docker_utils.py  pom.xml  requirements.txt  run_benchmark.sh  setup.sh  validate.py  visualize.py  visualize.sh  visualize_and_deploy.sh
arango-benchmark/: pom.xml
benchmark-cli/: pom.xml
benchmark-cli/src/main/java/com/graphbench/: Main.java
benchmark-cli/src/main/java/com/graphbench/cli/: BenchmarkCLI.java
common/: pom.xml
common-cpp/: CMakeLists.txt
common-cpp/cmake/: graphbench-config.cmake.in
common-cpp/include/graphbench/: benchmark_executor.hpp  benchmark_main.hpp  benchmark_server.hpp  benchmark_utils.hpp  csv_graph_reader.hpp  parameter_parser.hpp  progress_callback.hpp  property_benchmark_executor.hpp  snapshot_manager.hpp  type_converter.hpp  workload_dispatcher.hpp  workload_parameters.hpp
common-java/: pom.xml
common-java/src/main/java/com/graphbench/api/: BenchmarkExecutor.java  BenchmarkServer.java  BenchmarkUtils.java  CsvGraphReader.java  ParameterParser.java  ProgressCallback.java  PropertyBenchmarkExecutor.java  TypeConverter.java  WorkloadDispatcher.java
common-java/src/main/java/com/graphbench/workload/: AddEdgeParams.java  GetEdgeByPropertyParams.java  RemoveEdgeParams.java  WorkloadTask.java
common/docs/: SEMANTIC_CONSISTENCY.md
common/src/main/java/com/graphbench/api/: AbstractBenchmarkExecutor.java  BenchmarkExecutor.java  BenchmarkServer.java  CsvGraphReader.java  GraphBenchmarkExecutor.java  PropertyBenchmarkExecutor.java  WorkloadDispatcher.java
common/src/main/java/com/graphbench/benchmark/: BenchmarkExecutor.java  BenchmarkResult.java  LatencyBenchmark.java  ThroughputBenchmark.java
common/src/main/java/com/graphbench/compiler/: CompiledQuery.java  CompiledWorkload.java  CompiledWorkloadSerializer.java  CompilerFactory.java  CypherCompiler.java  GremlinCompiler.java  QueryLanguage.java  WorkloadCompiler.java
common/src/main/java/com/graphbench/config/: DatabaseConfigLoader.java  DatabaseInstanceConfig.java  DatasetConfig.java  ServerConfig.java  TaskConfig.java  WorkloadConfig.java
common/src/main/java/com/graphbench/dataset/: MatrixMarketReader.java
common/src/main/java/com/graphbench/db/: DatabaseAdapter.java  DatabaseFactory.java
common/src/main/java/com/graphbench/report/: BenchmarkReport.java  ReportWriter.java
common/src/main/java/com/graphbench/workload/: AddEdgeParams.java  AddVertexParams.java  GetNbrsParams.java  GetVertexByPropertyParams.java  Operation.java  RemoveEdgeParams.java  RemoveVertexParams.java  UpdateEdgePropertyParams.java  UpdateVertexPropertyParams.java  UpsertEdgePropertyParams.java  UpsertVertexPropertyParams.java  Workload.java  WorkloadGenerator.java  WorkloadOperation.java  WorkloadSerializer.java  WorkloadTask.java
config/: database-config.json  datasets.json
deploy/: generate_index.py
docker/arangodb/: CMakeLists.txt  Dockerfile  supervisord.conf
docker/arangodb/src/: arango_utils.hpp  arangodb_benchmark_executor.hpp  arangodb_benchmark_server.cpp  arangodb_client.hpp  arangodb_graph_loader.hpp  arangodb_property_benchmark_executor.hpp
docker/aster/: CMakeLists.txt  Dockerfile
docker/aster/src/: aster_benchmark_executor.hpp  aster_benchmark_server.cpp  aster_graph_loader.hpp  aster_property_benchmark_executor.hpp
docker/janusgraph/: Dockerfile  pom.xml
docker/janusgraph/src/main/java/com/graphbench/janusgraph/: BenchmarkServer.java  JanusGraphBenchmarkExecutor.java  JanusGraphBenchmarkServer.java  JanusGraphGraphLoader.java  JanusGraphPropertyBenchmarkExecutor.java
docker/neo4j/: Dockerfile  pom.xml
docker/neo4j/src/main/java/com/graphbench/neo4j/: BenchmarkServer.java  Neo4jBenchmarkExecutor.java  Neo4jBenchmarkServer.java  Neo4jGraphLoader.java  Neo4jPropertyBenchmarkExecutor.java
docker/orientdb/: Dockerfile  pom.xml
docker/orientdb/src/main/java/com/graphbench/orientdb/: OrientDBBenchmarkExecutor.java  OrientDBBenchmarkServer.java  OrientDBGraphLoader.java  OrientDBPropertyBenchmarkExecutor.java
docker/sqlg/: Dockerfile  pom.xml
docker/sqlg/src/main/java/com/graphbench/sqlg/: SqlgBenchmarkExecutor.java  SqlgBenchmarkServer.java  SqlgGraphLoader.java  SqlgPropertyBenchmarkExecutor.java
docs/: progress_callback_refactoring.md
host/: benchmark_launcher.py  progress_server.py  timeout_monitor.py
host/compiler/: workload_compiler.py
host/dataset/: dataset_loader.py
host/db/: docker_manager.py
host/report/: report_generator.py
janusgraph-benchmark/: Dockerfile.janusgraph  pom.xml
janusgraph-benchmark/src/main/java/com/graphbench/db/janusgraph/: JanusGraphAdapter.java
neo4j-benchmark/: Dockerfile.neo4j  pom.xml
neo4j-benchmark/src/main/java/com/graphbench/db/neo4j/: Neo4jAdapter.java
orientdb-benchmark/: pom.xml
visualize/: README.md  examples.sh  plot_batchsize_comparison.py  plot_performance_comparison.py  visualize.sh
workloads/: latency_tests.json  simple_delete_tests.json
workloads/templates/: batchsize_comparison.json  example_workload.json  large_structural_workload.json  latency_bench.json  medium_structural_workload.json  property_workload.json  quick_test.json  small_structural_workload.json  structural_workload.json
